--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="showcase">
             <div class="container">
                 <nav>
-                    <h1 class="logo">My Website</h1>
+                    <h1 class="logo">Cloud Hoster</h1>
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
